<resources>
    <string name="app_name">HKTShop</string>
    <string name="button_search">Tìm kiếm sản phẩm</string>
    <string name="todo">TODO</string>
    <string name="image_capture">image capture</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="title_more">Nhiều lựa chọn</string>
    <string name="title_sign_in">Đăng nhập</string>
    <string name="title_sign_out">Đăng xuất</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_quick_list">Danh sách mong muốn</string>
    <string name="title_my_order">Đơn đặt hàng</string>
    <string name="title_setting">Cài đặt</string>
    <string name="title_policy">Chính sách</string>
    <string name="title_help">Giúp đỡ</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_live_stream">Live stream</string>
    <string name="img_icon">icon trang chủ</string>
    <string name="title_info_account">Tài khoản</string>
    <string name="title_category">Danh mục</string>
    <string name="title_home">Trang chủ</string>
    <string name="description_store">Gian hàng</string>
    <string name="description_number_cart">Số lượng mua hàng</string>
    <string name="description_image_cart">Đây là hình ảnh giỏ hàng</string>
    <string name="description_cate">Danh mục các sản phẩm</string>
    <string name="hint_userName">Nhập Tài khoản</string>
    <string name="hint_password">Nhập mật khẩu</string>
    <string name="text_forgot_password">Quên mât khẩu</string>
    <string name="button_sign_in">Đăng nhập</string>
    <string name="button_sign_in_facebook">Đăng nhập facebook</string>
    <string name="button_sign_in_google">Đăng nhập Google</string>
    <string name="tip_sign_up">Bạn cần điền đầy đủ thông tin</string>
    <string name="name_sign_in">Nhập vào tên</string>
    <string name="email_sign_in">Nhập vào email</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="tip_enter_password">Mật khẩu phải bao gồm 6 ký tự và một chữ hoa</string>
    <string name="button_sign_up">Đăng ký</string>
    <string name="button_facebook">FaceBook</string>
    <string name="button_google">Google</string>
    <string name="create_account">Tạo tài khoản khác</string>
    <string name="list_product">Danh sách các sản phẩm</string>
</resources>
